[package]
name = "rust_audio_stream"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
config = "0.13"
cpal = "0.15"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
aes = "0.8"
cbc = "0.1"
hex = "0.4"
